name:                tablr
version:             0.1.0.0
synopsis:            A simple command line tool for generating ASCII tables.
description:         Please see README.md
homepage:            http://github.com/fimad/tablr
license:             Apache
license-file:        LICENSE
author:              Will Coster
maintainer:          willcoster@gmail.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable tablr
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/fimad/tablr
